# cortex.t

./: .gitignore  CHANGELOG.md  README.md  alias.sh  api.py  cache.db  combined_themes_list.py  diff.diff  endpoint_overrides.yaml.example  env.example  envrc.example  min_compute.yml  noxfile.py  organic.py  pyproject.toml  requirements.txt  run_history.json  setup.py  start_miner.sh  start_validator.py  start_validator.sh  state.json
Cortex.t.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bittensor_subnet_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cortex_t/: __init__.py
cortext/: __init__.py  axon.py  constants.py  dendrite.py  enum.py  metaclasses.py  protocol.py  reward.py  sentry.py  utils.py
cursor/: Dockerfile  app.py  docker-compose.yml  readme.md  requirements.txt  start_cursor.sh
miner/: alt_key_handler.py  capacity.py  claude_miner.py  config.py  constants.py  error_handler.py  miner.py  nsfw_phrase_list  nsfw_tools.py  prices.ipynb  services.py  test_miners.py  test_openai.py  util.py
neurons/: api.py  compare_embeddings.py  endpoint.py  image_metadata.py  level_up.py  miner.py  new.py  state.json  test2_uid_0.txt  test_embeddings.py  test_images.py  test_openai.py  test_uid_0.txt  uid_to_question.txt  validator.py
server/: docker-compose.yml  requirements.txt
template/: __init__.py  protocol.py  reward.py  utils.py
test_base/: __init__.py
test_scripts/: check_github_latest.py  get_full_list.py  get_valid_valis.py  test_anthropic.py  test_anthropicv2.py  test_claude.py  test_extract_list.py  (+2 more)
(+171 files in other folders)
